@@ -2,6 +2,7 @@
 
     <div class="mobile-menu mobile-menu-{{name}}">
 
+        {{#if settings.show_tabs}}
         <ul class="topLevelTabs">
             {{#each toplevel}}
 
@@ -10,6 +11,7 @@
              {{/each}}
 
         </ul>
+        {{/if}}
 
         <div class="tabPanes">
             <div class="tabPane">
