@@ -5,6 +5,8 @@ Changelog
 1.4.1 (unreleased)
 ------------------
 
+- Mobile buttons: add settings "show_tabs" and "show_two_levels_on_root". [jone]
+
 - Pass the url of the navigation root to the handlebars template.
   [mbaechtold]
 
